@@ -12,6 +12,7 @@ import org.springframework.boot.jdbc.EmbeddedDatabaseConnection;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -37,11 +38,11 @@ public class InstanceStageRepositoryTest {
         dateCreate = new Date();
         return  Task.builder().name("Task_test_1").title("Task Test 1").urlService( ".....xxxx....")
                 .taskUrl("htttp....iiiiuuu...")
-                .rulers(List.of(
+                .rulers(Arrays.asList(
                         Ruler.builder().condition("APRUBE").action("go to end").build(),
                         Ruler.builder().condition("CANCEL").action("go to STAR").build()
                 ))
-                .roles(List.of(
+                .roles(Arrays.asList(
                         Role.builder().name("Developer").codeRole("w23a").description("developer").build(),
                         Role.builder().name("DeveloperII").codeRole("w25a").description("Developer Senor").build()
                 ))
@@ -62,7 +63,7 @@ public class InstanceStageRepositoryTest {
                 .task(task)
                 .dateStart(this.dateCreate)
                 .assignes(
-                        List.of(TaskAssigned.builder().taskId(task.getIdTask()).idBpmAssigned(2121L).build())
+                		Arrays.asList(TaskAssigned.builder().taskId(task.getIdTask()).idBpmAssigned(2121L).build())
                 )
                 .state(SystemSate.CREATE.toString())
                 .idControlProcessReferent(1l)
@@ -77,7 +78,7 @@ public class InstanceStageRepositoryTest {
                 .title("InstanceStage_Test")
                 .procesCode("procesCode")
                 .instanceProcessId(112l)
-                .instancesTasks(List.of(this.getInstanceTask()))
+                .instancesTasks(Arrays.asList(this.getInstanceTask()))
                 .stageNumber(1)
                 .state(SystemSate.CREATE.toString())
                 .build();
