@@ -10,6 +10,7 @@ import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabas
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -25,7 +26,7 @@ public class StageRepositoryTest {
 
     private Stage getAStage(){
         dateCreate = new Date();
-        List<Role> roles = List.of(
+        List<Role> roles = Arrays.asList(
                 Role.builder().name("Developer").codeRole("w23a").description("developer").build(),
                 Role.builder().name("DeveloperII").codeRole("w25a").description("Developer Senor").build()
         );
@@ -35,7 +36,7 @@ public class StageRepositoryTest {
                 .title("Go to party")
                 .type("human")
                 .dateCreate(dateCreate)
-                .tasks(List.of(this.getTask()))
+                .tasks(Arrays.asList(this.getTask()))
                 .stages(new ArrayList<Stage>())
                 .roles(roles)
                 .stageNumber(1)
@@ -45,7 +46,7 @@ public class StageRepositoryTest {
     private Task getTask(){
         return  Task.builder().name("Task_test_1").title("Task Test 1").urlService( ".....xxxx....")
                 .taskUrl("htttp....iiiiuuu...")
-                .rulers(List.of(
+                .rulers(Arrays.asList(
                         Ruler.builder().condition("APRUBE").action("go to end").build(),
                         Ruler.builder().condition("CANCEL").action("go to STAR").build()
                 ))
